# qmmp-mono-plugin

./: .gitignore  CMakeLists.txt  README.md  effectmonofactory.cpp  effectmonofactory.h  moc_effectmonofactory.cpp  mono.pro  monoplugin.cpp  monoplugin.h
